--- a/wp-content/themes/mvp/sass/style.scss
+++ b/wp-content/themes/mvp/sass/style.scss
@@ -43,5 +43,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "components/sections/social-slider.scss";
 @import "components/sections/footer.scss";
 @import "components/sections/rte.scss";
+@import "components/sections/nav.scss";
 
 @import "abstracts/mixins/_mixins.scss";
