--- a/wp-content/themes/mvp/style.css
+++ b/wp-content/themes/mvp/style.css
@@ -1028,38 +1028,6 @@ textarea {
 	text-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
 }
 
-.grid nav {
-	grid-column: 2 / 12;
-	grid-row: 1;
-}
-
-.navgrid {
-	background-color: white;
-}
-
-.nav__list {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	list-style: none;
-}
-
-.nav__list-item {
-	display: inline-block;
-}
-
-.nav__list-item a {
-	font-family: 'Indie Flower', cursive;
-	font-weight: 400;
-	text-transform: uppercase;
-	font-size: 1.25rem;
-	line-height: 1.25rem;
-	letter-spacing: 2;
-	text-decoration: none;
-	color: #000;
-}
-
 .about-me {
 	background-color: #f9f9f9;
 }
@@ -1422,6 +1390,48 @@ footer {
 .rte {
 	grid-column: 2/12;
 	text-align: center;
+}
+
+.nav {
+	grid-column: 1/13;
+	display: block;
+	height: 100%;
+	background-color: #fff;
+}
+
+.nav .nav__list {
+	margin: 0;
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+}
+
+.nav .nav__list .nav__list-item a {
+	text-decoration: none;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 60px;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	color: #000000;
+}
+
+.nav .nav__list .logo {
+	display: none;
+}
+
+.nav .nav__cross {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 1rem;
+}
+
+.fa-bars {
+	font-size: 34px;
+	color: #000;
 }
 
 /*# sourceMappingURL=style.css.map */
