--- a/wp-content/themes/mvp/sass/components/sections/nav.scss
+++ b/wp-content/themes/mvp/sass/components/sections/nav.scss
@@ -2,47 +2,179 @@
 
 .nav {
     grid-column: 1/13;
-    display: block;
-    height: 100%;
-    background-color: #fff;
+
+}
+
+.top-nav {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: -100vw;
+    z-index: 50;
+    background-color: #DCD2C8;
+    transition: all 650ms cubic-bezier(1,0,0,1);
+    margin: 0 !important;
+    padding: 0 !important;
+
+    @include breakpoint(lg) {
+        left: unset;
+        height: 15vh;
+        background-color: transparent;
+    }
 
     .nav__list {
-        margin: 0;
-        list-style-type: none;
+        list-style: none;
+        width:100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 !important;
+        padding: 0 !important;
+
+        @include breakpoint(lg) {
+            flex-direction: row;
+        }
 
         .nav__list-item {
-            a {
-                text-decoration: none;
-                font-family: Poppins;
-                font-style: normal;
-                font-weight: 300;
-                font-size: 18px;
-                line-height: 60px;
+            margin: 0 2em;
+            padding: 1rem;
+
+            .nav__link {
+                font-family: Indie Flower;
+                font-size: 24px;
+                line-height: 26px;
                 letter-spacing: 0.05em;
                 text-transform: uppercase;
+                color: black;
+                text-decoration: none;
 
-                color: #000000;
+                @include breakpoint(lg) {
+                    color: white;
+                }
+            }
+
+            &.logo {
+
+                &.white {
+                    display: none;
+                    @include breakpoint(lg) {
+                        display: unset;
+                    }
+                }
+
+                &.black {
+                    @include breakpoint(lg) {
+                        display: none;
+                    }
+                }
+
+                img {
+                    height: 150px;
+                    @include breakpoint(lg) {
+                        height: 115px;
+                    }
+                    width: auto;
+                }
+            }
+
+            .nav-link:hover,
+            .nav-link:focus {
+                background: green;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent; 
+                
+            }
+        }
+    
+    }
+
+    &.scrolled {
+        background-color: white;
+        
+        .nav__list {
+            .nav__list-item {
+                a {
+                    color: black;
+                }
+
+                &.logo {
+
+                    &.white {
+                        display: none;
+                    }
+    
+                    &.black {
+                        display: unset;
+                    }
+                }
             }
         }
 
-        .logo {
-            display: none;
-        }
-
-    }
-
-    .nav__cross {
-        position: absolute;
-        top: 0;
-        right: 0;
-        padding: 1rem;
     }
 }
 
-.fa-bars {
-    font-size: 34px;
-    color: #000;
+.top-nav.open {
+    left: 0;
+    border-radius: initial;
+}
+
+.menu-toggler {
+    position: absolute;
+    top: 5vh;
+    right: 5vw;
+    width: 3rem;
+    height: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    z-index: 1500;
+    transition: transform 650ms ease-out;
+
+    @include breakpoint(lg) {
+        display: none;
+    }
+}
+
+.menu-toggler.open {
+    transform: rotate(-45deg);
+}
+
+.bar {
+    background: black;
+    width: 100%;
+    height: 4px;
+    border-radius: .8rem;
+}
+
+.bar.half {
+    width: 50%;
+}
+
+.bar.start {
+    transform-origin: right;
+    transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+}
+
+.open .bar.start{
+    transform: rotate(-450deg) translateX(.8rem);
+    background: black;
+}
+
+.bar.end {
+    align-self: flex-end;
+    transform-origin: left;
+    transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+}
+
+.open .bar.end{
+    transform: rotate(-450deg) translateX(-.8rem);
+    background: black;
+}
+
+.open .bar {
+    background: black;
 }
 
