added responsive menu

--- a/wp-content/themes/mvp/sass/base/typography/_headings.scss
+++ b/wp-content/themes/mvp/sass/base/typography/_headings.scss
@@ -20,11 +20,11 @@ h6 {
 }
 
 .subheader {
-	font-family: 'Indie Flower', cursive;
+	font-family: 'BisousSolid';
 	font-style: normal;
 	font-weight: normal;
-	font-size: 1.2rem;
-	letter-spacing: 0.085em;
+	font-size: 28px;
+	letter-spacing: 0.2em;
 	text-transform: uppercase;
 	height: auto;
 	color: #363B34;
