--- a/wp-content/themes/mvp/components/sections/nav.css
+++ b/wp-content/themes/mvp/components/sections/nav.css
@@ -46,10 +46,10 @@
 }
 
 .top-nav .nav__list .nav__list-item .nav__link {
-	font-family: Indie Flower;
-	font-size: 24px;
+	font-family: 'BisousSolid';
+	font-size: 28px;
 	line-height: 26px;
-	letter-spacing: 0.05em;
+	letter-spacing: 0.2em;
 	text-transform: uppercase;
 	color: black;
 	text-decoration: none;
@@ -91,6 +91,7 @@
 .top-nav .nav__list .nav__list-item .nav-link:hover,
 .top-nav .nav__list .nav__list-item .nav-link:focus {
 	background: green;
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
