--- a/wp-content/themes/mvp/sass/components/sections/nav.scss
+++ b/wp-content/themes/mvp/sass/components/sections/nav.scss
@@ -42,10 +42,10 @@
             padding: 1rem;
 
             .nav__link {
-                font-family: Indie Flower;
-                font-size: 24px;
+                font-family: 'BisousSolid';
+                font-size: 28px;
                 line-height: 26px;
-                letter-spacing: 0.05em;
+                letter-spacing: 0.2em;
                 text-transform: uppercase;
                 color: black;
                 text-decoration: none;
@@ -82,6 +82,7 @@
             .nav-link:hover,
             .nav-link:focus {
                 background: green;
+                background-clip: text;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent; 
                 
